--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -1,7 +1,7 @@
 @import "../../app.scss";
 
 .container {
-  height: calc(100dvh - 100px);
+  height: calc(100vh - 100px);
   background: linear-gradient(180deg, #0c0c1d, #111132);
   position: relative;
   overflow: hidden;
